--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
     "react-native-vector-icons": "^9.2.0",
-    "expo-location": "~15.0.1"
+    "expo-location": "~15.0.1",
+    "expo-updates": "~0.15.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
